2008-01-04  Kouhei Sutou  <kou@cozmixng.org>

	* sample/gst-inspect.rb: implemented print_children_info.

	* sample/gst-inspect.rb: implemented print_signals_info.

	* sample/gst-inspect.rb: implemented print_element_properties_info.

	* sample/gst-inspect.rb: implemented print_pad_info.

	* src/rbgst-element.c: cleanup style.

	* test/test_element.rb, src/rbgst-element.c: added #require_clock?
	and #provide_clock?.

	* sample/gst-inspect.rb: defined Inspector class.

	* test/test_value.rb, src/rbgst-value.c: supported GST_TYPE_LIST.

	* test/test_caps.rb, src/rbgst-caps.c: added #each and #[].

	* test/test_static_caps.rb, src/rbgst-static-caps.c: added #to_caps.

	* test/test_static_pad.rb, src/rbgst-static-caps.c: added.

	* test/test_pad_template.rb: renamed to ...
	* test/test_static_pad_template.rb: ... this.

	* sample/gst-inspect.rb: implemented print_pad_templates_info.

	* src/rbgst-pad-template.c, src/rbgst-static-pad-template.c: used
	better macros.

	* src/rbgst-pad-template.c: split to ...
	* src/rbgst-static-pad-template.c: .. this.

	* test/test_pad_template.rb, src/rbgst-pad-template.c,
	src/rbgst-pad-template.c: made GstStaticPadTemplate object.

	* src/rbgstpadtemplate.c: renamed to ...
	* src/rbgst-pad-template.c: ... this.

2008-01-03  Kouhei Sutou  <kou@cozmixng.org>

	* sample/gst-inspect.rb: implemented print_interfaces.

	* sample/gst-inspect.rb: implemented print_hierarchy.

	* src/rbgst-structure.c, test/test_structure.rb: added .parse.

	* src/rbgst-structure.c, test/test_structure.rb: added #to_s and
	#inspect.

	* src/rbgst-structure.c, test/test_structure.rb: added #have_field?.

	* src/rbgst-structure.c, test/test_structure.rb: added #nth_field_name.

	* src/rbgst-structure.c, test/test_structure.rb: added #size and
	#empty?.

	* src/rbgst-structure.c, test/test_structure.rb: added #collect!.

	* src/rbgst-structure.c, test/test_structure.rb: added #each.

	* src/rbgst-structure.c, test/test_structure.rb: added #delete and
	#clear.
