@@ -1,3 +1,7 @@
+2008-01-06  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rbgst-value.c: supported GstIntRange.
+
 2008-01-04  Kouhei Sutou  <kou@cozmixng.org>
 
 	* sample/gst-inspect.rb: implemented print_children_info.
